# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: jira_commit_msg_fixer.py
